# devligths_project

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
API/: main.py
API/config/: __base.py  __init__.py  database.py
API/models/: __init__.py  products.py  schema.py  users.py
API/routes/: __init__.py  products.py  test.py  users.py
API/services/: auth.py  products.py
API/templates/: dashboard.html
templates/: index.html
